Bug/dropdown bugs (#119)
* apply background color for dropdown menu

* fix a bug where selecting a dropdown item with a complex object would result an error when trying to re-render the button label

* add some storyboards that demonstrate usage of labelField / labelFunction

* delint

* allow the placeholder text to be styled; storybooks

* rework the Dropdown's internal layout so that the placeholder or selection text will truncate based on available horizontal space

* fix an annoying bug where the dropdown menu would occassionally render in the top left since the positioning was being deferred

* fix a bug where the selected item was not reliably scrolled into view when menu opened (only when menu items were long and being wrapped?)

* remove the keyboard listener on dropdown button as it was redundant: pressing spacebar will trigger the onClick handler anyways

* fix an issue where clicking exactly on the svg path wouldn't trigger click handler; fix a bug where the width of the dropdown was slightly less than it should be due to the negative margin used on the thumb

* remove dup listener

* fix a bug where clicking on a dropdown item was navigating to hash

* fix Safari / IE positioning issue in a cleaner way (as suggested by sophistifunk)

* clean up the "createCssRule" utility to avoid creating dup items due to storybook / webpack reloading

* disable console.log

* remove console.log

--- a/less/components/dropdown.less
+++ b/less/components/dropdown.less
@@ -1,15 +1,30 @@
 .Dropdown {
+    display: flex;
+    align-items: center;
+
     .Dropdown-button {
         min-width: 130px;
+        padding-right: 25px;
+        flex-grow: 0;
+        text-align: left;
+        .text-overflow;
     }
 
-    // need to nest a container in the button for Firefox to apply flex-box
-    .Dropdown-button-container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    .Dropdown-thumb {
+        width: 16px;
+        height: 16px;
+        // nudge the thumb over the button
+        margin-left: -25px;
+        // but apply a right margin so total width of .Dropdown matches button
+        // (-25 + 16 + 9) = 0
+        margin-right: 9px;
+        flex-shrink: 0;
+        cursor: pointer;
 
-        .svg-icon {
+        .svg-icon.keyboard_arrow_down {
+            display: block;
+            width: 100%;
+            height: 100%;
             fill: #fff;
         }
     }
@@ -22,6 +37,7 @@
         padding: 0;
         margin: 0;
         border: 1px solid @btn-primary-border;
+        background: #fff;
 
         .Dropdown-menu-item {
             display: inline-block;
